tests/samples/compile_errors/undefined_identifier/unknown_variable.bas
Attribute VB_Name = "UnknownVariable"
Sub TestUnknownVar()
    Dim x As Integer
    x = 10
    y = 20 ' y is not defined (assuming Option Explicit behavior is default or desired)
End Sub
